--- a/03_Data Science/2.Analysis/1.pandas_csv/.vscode/launch.json
+++ b/03_Data Science/2.Analysis/1.pandas_csv/.vscode/launch.json
@@ -8,7 +8,8 @@
             "name": "Python: Current File",
             "type": "python",
             "request": "launch",
-            "program": "${file}"
+            "program": "${file}",
+            "args": ["supplier_data.csv", "output_files/2output.csv"]
         },
         {
             "name": "Python: Attach",
